--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.18.5",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
